--- a/child1/package.json
+++ b/child1/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "~10.0.1",
     "@angular/platform-browser-dynamic": "~10.0.1",
     "@angular/router": "~10.0.1",
-    "common-package-tin-test": "0.0.1",
+    "@ngrx/effects": "^10.0.1",
+    "@ngrx/store": "^10.1.2",
     "lib-test-tin-spa": "0.0.2",
     "rxjs": "~6.5.5",
     "single-spa": "^5.4.2",
