--- a/title/package.json
+++ b/title/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "child2",
+  "name": "title",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run serve:single-spa",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:single-spa": "ng build --prod --deploy-url http://localhost:4202/",
-    "serve:single-spa": "ng serve --disable-host-check --port 4202 --deploy-url http://localhost:4202/ --live-reload false"
+    "build:single-spa": "ng build --prod --deploy-url http://localhost:4203/",
+    "serve:single-spa": "ng serve --disable-host-check --port 4203 --deploy-url http://localhost:4203/ --live-reload false"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "@angular/common": "~10.0.1",
     "@angular/compiler": "~10.0.1",
     "@angular/core": "~10.0.1",
+    "@angular/elements": "^10.1.4",
     "@angular/forms": "~10.0.1",
     "@angular/platform-browser": "~10.0.1",
     "@angular/platform-browser-dynamic": "~10.0.1",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.1.0",
     "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-ng-packagr": "~0.1000.8",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.1",
     "@angular/language-service": "~10.0.1",
@@ -46,6 +49,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
